bugfix: Fixed issue with longer code being cut off

--- a/src/components/Blog/BlogPage/BlogPage.module.scss
+++ b/src/components/Blog/BlogPage/BlogPage.module.scss
@@ -34,10 +34,6 @@
     border-radius: 0.25em;
   }
 
-  pre {
-    max-width: 20vw;
-  }
-
   code {
     background-color: #0f0e17;
     color: #fffffe;
